--- a/src/SimpleShopping/angularapp/angular.json
+++ b/src/SimpleShopping/angularapp/angular.json
@@ -22,13 +22,18 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "*.svg",
+                "input": "./node_modules/bootstrap-icons/",
+                "output": "/"
+              }
             ],
             "styles": [
               "src/styles.css",
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/bootstrap-icons/font/bootstrap-icons.min.css"
-
+            
             ],
             "scripts": [
               "./node_modules/bootstrap/dist/js/bootstrap.min.js"
