--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -22,6 +22,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0-preview.1.23110.8" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.0-preview.1.23110.8" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0-preview.1" />
+    <PackageReference Include="Pagination.EntityFrameworkCore.Extensions" Version="2.4.3" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.0-preview4" />
   </ItemGroup>
 
